<?xml version="1.0"?>
<package format="3">
  <name>basic_pubsub_demo</name>
  <version>0.0.1</version>
  <description>
    Basic ROS 2 C++ publish-subscribe demo.
    Periodically publishes textual data and prints received data
    to confirm successful message exchange.
  </description>

  <maintainer email="maintainer@example.com">Demo Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
