<?xml version="1.0"?>
<package format="3">
  <name>integer_adder</name>
  <version>0.0.1</version>
  <description>
    A simple ROS 2 example package in C++ that demonstrates a request-response
    workflow using a service to add two integers.
  </description>

  <maintainer email="maintainer@example.com">Example Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
